# tauri-leptos-android-template

./: .gitignore  Cargo.toml  Justfile  Trunk.toml  flake.nix  rust-toolchain.toml
src-tauri/: Cargo.toml  tauri.conf.json
src-ui/: Cargo.toml  index.html
src-ui/src/: main.rs
